# Moon

./: .gitignore  Pipfile  README.org
moon/: ;  Cargo.toml
moon-cli/: add_repository.py
moon-frontend/: cli.py  handler.py
moon-gui/: Cargo.toml
moon-gui/src/: main.rs
moon/src/: lib.rs  moonread.rs  package.rs
