[package]
name = "moon"
version = "0.1.0"
authors = ["Abhinav Chavali <abhinavchavali12@gmail.com>"]
edition = "2018"

[lib]
name = "moon"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
walkdir = "2.3.2"
dirs = "1.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

